pages, navigationbar font adjustment, fix canvas height overflowing

--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -1,10 +1,10 @@
 body{
-    background-color: #121212;
+    background-color: #111;
     padding: 0px;
     margin: 0px;
 }
 
-#containerLanding{
+.container{
     display: block;
     margin: 0 auto;
     padding: 2.5em 0em;
@@ -12,33 +12,33 @@ body{
     max-width: 984px;
 }
 
-#containerLanding h1{
+.container h1{
     font-family: "Press Start 2P", cursive;
     font-size: 2.25em;
     line-height: 1.25em;
     font-weight: normal;
 }
-#containerLanding p{
+.container p{
     font-family: "Open Sans", sans-serif;
     font-size: 1.15em;
     line-height: 1.5em;
 }
-#containerLanding p{
+.container p{
     font-family: "Open Sans", sans-serif;
     font-size: 1.15em;
     line-height: 1.5em;
 }
-#containerLanding{
-    margin-top: 4em;
+.container{
+    margin-top: 1em;
 }
-#containerLanding a{
+.container a{
     text-decoration-skip: ink;
     line-height: 1.5em;
 }
 
 nav{
     padding: 2em 0;
-    background-color: #010101;
+    background-color: #111;
     position:fixed;
     top: 0px;
     width: 100%;
@@ -53,14 +53,14 @@ nav b{
 }
 nav, nav a{
     font-family: "Press Start 2P", cursive;
-    font-size: 1.15em;
+    font-size: 1em;
     color: #fefefe;
     text-transform: uppercase;
 }
 nav a{
     text-decoration: none; 
     border-bottom: 3px solid #fefefe; 
-    transition: 0.25s ease-in-out all;
+    transition: 0.25s ease-in-out border-bottom-color;
 }
 nav a:hover{
     border-bottom: 3px solid #f24a02; 
@@ -76,6 +76,7 @@ nav a.active{
     z-index: 1;
     margin: 0 auto;
     padding: 0;
+    margin-bottom: -4px;
 }
 #containerGame #perlin{
     margin-top: 0px;
